Revision history for Perl extension BZ::Client.

1.06 Thu Dec 12 14:06:00 2013
    - Applied patch from https://rt.cpan.org/Public/Bug/Display.html?id=78467, needs a test.
    - Applied patch from https://rt.cpan.org/Ticket/Display.html?id=78694, needs a test.

1.05 Fri Nov 29 14:11:00 2013
    - Applied patch from http://hg.mozilla.org/webtools/bzapi/raw-file/24eba717cf5b/patches/xmlrpc-fix.diff

1.04 Mon Aug 22 19:23:00 2011
    - Added support for dateTime via instances of DateTime

1.03 Wed Feb 03 13:22:00 2010
    - Added URI as a prerequisite to Makefile.PL.
    - Fixed missing $client in Bug.pm (RT ticket 54227)

1.02 Sat Aug 15 15:31:00 2009
    - Added LICENSE file to the distribution.

1.01 Mon Aug 10 17:31:00 2009
    - XML::Parser and XML::Writer now declared as dependencies.


1.0  Tue Jun 23 07:18:25 2009
	Created
